# novel_agent

./: .coveragerc  .env.example  .gitignore  AGENTS.md  ANTI-PATTERNS.md  CLAUDE.md  README.md  THE_STILLWATER_COVENANT.epub  design.md  manuscript.md  manuscript.tex  pyproject.toml  run_pipeline.py  seed.txt  seed.txt.example  test_review_context.py
.novelforge/.cache/: 02a4a0aca51202e5.txt  05482f17949b6496.txt  058886cd743dcbd6.txt  06a27034b0e9d505.txt  081e57be159ac8ae.txt  0941915c20a77c97.txt  095b1b55ba9f285c.txt  0d37df1ae77227b6.txt  0f589c91e17ac1c5.txt  1138d71951f9e51f.txt  144510b9083da668.txt  1523b04891999c72.txt  198bdd9005e3efab.txt  1bd84219f7571aba.txt  1f29f2627afb6c35.txt  23c3e4d72b416c50.txt  247327b9f0df071a.txt  2578947647f2fba9.txt  28a1ccb7542a72e9.txt  2f2e8a3450ade056.txt  3295aa360fa4a486.txt  333ee69bfde0b871.txt  34cadf6641ec0464.txt  3746eef5044cf91b.txt  38c342aab3431e4f.txt  38d30e8b632becdc.txt  3a0bc40bb8a48b7f.txt  3a67bb27692b6c16.txt  (+66 more)
chapters/: ch_01.md  ch_02.md  ch_03.md  ch_04.md  ch_05.md  ch_06.md  ch_07.md  ch_08.md  ch_09.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_14.md  ch_15.md
export/: manuscript.epub  manuscript.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: ci_all_tests.sh  patch_bundle_dmg.sh  pre-commit.sh
src/: __init__.py
tests/: conftest.py  conftest_export.py  test_draft_chapter.py  test_evaluate.py  test_export.py  test_foundation_generators.py  test_pipeline_integration.py  test_prompts.py  test_review.py  test_scoring.py
(+56 files in other folders)
